--- a/app/scss/_main_page.scss
+++ b/app/scss/_main_page.scss
@@ -8,11 +8,41 @@ header{
     display: flex;
     align-content: center;
     align-items: center;
+    justify-content: space-between;
 
 
   }
+  .logo{
+    margin-right: 35px;
+  }
   .menu-list{
     display: flex;
+    a{
+      margin-right: 20px;
+      color: #ffffff;
+
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 30px;
+    }
+  }
+  .header_contacts{
+    display: flex;
+    flex-direction: column;
+    float: right;
+    a{
+      color: #ffffff;
+      line-height: 23px;
+      font-weight: 500;
+      text-align: right;
+      font-size: 27px;
+    }
+    span{
+      font-size: 12px;
+      font-weight: 400;
+      color: #ffffff;
+      letter-spacing: -0.24px;
+    }
   }
 }
 
@@ -33,5 +63,120 @@ header{
   color: #fff;
   &:hover{
     background-color: #ffb83d;
+  }
+}
+
+.title_page{
+  height: 240px;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  width: 100%;
+  position: relative;
+  &:before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgba(1, 95, 6, 0.62);
+    position: absolute;
+    z-index: 0;
+    display: inline-block;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+  }
+  h1{
+    color: #ffffff;
+    position: relative;
+    z-index: 10;
+
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 21px;
+    margin: 0;
+  }
+}
+
+.blog_list{
+  padding: 60px 0;
+}
+.blog_list_item{
+  width: 100%;
+  position: relative;
+  margin-bottom: 40px;
+  img{
+    width: 100%;
+    height: 340px;
+    object-fit: cover;
+  }
+  .blog_list_item_inform{
+    width: calc(100% - 50px);
+    margin: -50px auto 0;
+    background-color: #fff;
+    padding: 25px;
+    display: inline-block;
+    margin-left: 25px;
+    a{
+      font-size: 18px;
+      color: #111;
+      line-height: 25px;
+      margin-bottom: 4px;
+      display: block;
+      &:hover{
+        color: #2c9fec;
+      }
+    }
+    p{
+      font-size: 14px;
+      line-height: 20px;
+      color: #555;
+
+    }
+    .read_more{
+      font-size: 14px;
+      color: #2c9fec;
+      line-height: 20px;
+      &:hover{
+        color: $main_color;
+      }
+    }
+  }
+}
+
+
+.pagination{
+  margin: 0 auto;
+  justify-content: center;
+  display: flex;
+  .nav-links{
+    display: flex;
+    margin: 0 auto;
+    .page-numbers{
+      width: 42px;
+      height: 42px;
+      border: 1px solid #cccccc;
+      background-color: #ffffff;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+      color: #cccccc;
+      font-size: 14px;
+      font-weight: 500;
+      margin-right: 10px;
+      &.current, &:hover{
+        background-color: #2c9fec;
+        color: #fff;
+        border: 1px solid #2c9fec;
+      }
+      &:last-child{
+        margin-right: 0;
+      }
+
+    }
   }
 }
