--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -9,7 +9,7 @@
 }
 
 ::selection {
-  background-color: #ffa742;
+  background-color: #00b3ee;
   color: #fff;
 }
 
@@ -21,7 +21,7 @@ body {
   font-size: 16px;
   min-width: 320px;
   position: relative;
-  line-height: 1.65;
+  line-height: 1.35;
   -webkit-appearance: none;
   -webkit-font-smoothing: antialiased;
 
@@ -34,7 +34,10 @@ a , button{
   text-decoration: none;
   transition: all 0.3s ease;
   outline: none!important;
-  border: none!important;
+  //border: none!important;
+  &:hover{
+    text-decoration: none;
+  }
 }
 
 input{
