--- a/app/include/components/footer.html
+++ b/app/include/components/footer.html
@@ -1,4 +1,177 @@
+<footer>
+    <div class="footer_wrap">
+        <div class="container">
+            <a href="#" class="logo"><img src="img/logo.png" alt=""></a>
+            <div class="footer_contacts">
+                <a href="#">0344 387 2727</a>
+                <span> Mon - Thu: 09:00 - 17:30 & Fri: 09:00 - 17:00</span>
+            </div>
+        </div>
+    </div>
 
+    <div class="footer_main">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="footer_menu_item">
+                        <span>Leasing</span>
+                        <ul class="menu-list">
+                            <li class="menu-item">
+                                <a href="#">Browse All Vehicles</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Audi Lease Deals</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">BMW Lease Deals</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Mercedes Lease Deals</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Personal Car Leasing Deals</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Car Rental</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Intelligent Van Leasing</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-sm-6">
+                    <div class="footer_menu_item">
+                        <span>Legal</span>
+                        <ul class="menu-list">
+                            <li class="menu-item">
+                                <a href="#">Legal Info</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Treating Customers Fairly</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">BVRLA Code of Conduct</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Complaints Procedure</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Subject Access Request</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Privacy Policy</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-sm-6">
+                    <div class="footer_menu_item">
+                        <span> Help</span>
+                        <ul class="menu-list">
+                            <li class="menu-item">
+                                <a href="#">Home</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">About Us</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Leasing Guide</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Contact</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Car Insurance</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <div class="footer_menu_item">
+                        <span>  Advantages</span>
+                        <ul class="menu-list">
+
+                            <li class="menu-item">
+                                <a href="#">Refer a Friend</a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#">Price Match Challenge</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="footer_middle_line">
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="footer_menu_item">
+                            <span>  Follow us</span>
+                            <ul class="social-list">
+
+                                <li class="social-list-item">
+                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <ul class="payments">
+                            <li><img src="img/visa.png" alt=""></li>
+                            <li><img src="img/electron.png" alt=""></li>
+                            <li><img src="img/maestro.png" alt=""></li>
+                            <li><img src="img/mastercard.png" alt=""></li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer_bottom_line">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-9">
+                    <div class="footer_bottom_line_inform">
+                        <div class="company_logos">
+                           <a href="#"><img src="img/f_logo.png" alt=""></a>
+                           <a href="#"><img src="img/f_logo_2.png" alt=""></a>
+                       </div>
+                        <p>
+                            Copyright © 2018 Intelligent Car Leasing. All Rights Reserved. Head Office: Skypark 1, 8 Elliot Place, Glasgow, G3 8EP. Intelligent Car Leasing is authorised and regulated by the Financial Conduct Authority (reference number 673209), not all types of business undertaken are authorised and regulated by the Financial Conduct Authority. Intelligent Car Leasing is a credit broker and not a finance provider. All vehicles include free mainland UK delivery; for full details on all deals please see our terms and conditions.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <p class="company_developer">
+                        Website designed & developed by <a href="#">morphsites®</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
+</footer>
 
 <script src="js/scripts.min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/animejs/1.0.0/anime.min.js'></script>
