--- a/app/include/index.html
+++ b/app/include/index.html
@@ -9,7 +9,7 @@
 <section class="blog_list">
     <div class="container">
         <div class="row">
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                 <div class="blog_list_item">
                     <img src="img/i_2.png" alt="">
                     <div class="blog_list_item_inform">
@@ -20,7 +20,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 ">
                 <div class="blog_list_item">
                     <img src="img/i_1.png" alt="">
                     <div class="blog_list_item_inform">
@@ -30,7 +30,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 ">
                 <div class="blog_list_item">
                     <img src="img/i_3.png" alt="">
                     <div class="blog_list_item_inform">
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 ">
                 <div class="blog_list_item">
                     <img src="img/i_4.png" alt="">
                     <div class="blog_list_item_inform">
@@ -51,7 +51,7 @@
                 </div>
             </div>
 
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 ">
                 <div class="blog_list_item">
                     <img src="img/i_5.png" alt="">
                     <div class="blog_list_item_inform">
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 ">
                 <div class="blog_list_item">
                     <img src="img/i_6.png" alt="">
                     <div class="blog_list_item_inform">
