--- a/app/include/components/header.html
+++ b/app/include/components/header.html
@@ -2,13 +2,14 @@
     <div class="container">
         <div class="header_wrap">
             <a href="#" class="logo"><img src="img/logo.png" alt=""></a>
+            <a class="menu-link" href="#">Menu</a>
             <nav>
                 <ul class="menu-list">
-                    <li class="menu-item current-menu-item">
-                        <a href="#">Special Offers</a>
+                    <li class="menu-item current-menu-item ">
+                        <a href="#" class="hot">Special Offers</a>
                     </li>
                     <li class="menu-item">
-                        <a href="#">Help Me Decide</a>
+                        <a href="#" class="new">Help Me Decide</a>
                     </li>
                     <li class="menu-item">
                         <a href="#">Leasing Guide </a>
