--- a/app/scss/_main_page.scss
+++ b/app/scss/_main_page.scss
@@ -3,7 +3,7 @@ header{
   width: 100%;
 
   background-color: $main_color;
-  padding: 15px 0;
+  padding: 18px 0;
   .header_wrap{
     display: flex;
     align-content: center;
@@ -17,14 +17,43 @@ header{
   }
   .menu-list{
     display: flex;
+    li{
+      margin-right: 25px;
+      position: relative;
+      &:last-child{
+        margin-right: 0;
+      }
+    }
     a{
-      margin-right: 20px;
-      color: #ffffff;
 
+      color: #ffffff;
+      position: relative;
       font-size: 14px;
       font-weight: 500;
       line-height: 30px;
+      &.hot:after{
+        content: "HOT";
+        color: #e10000;
+        font-size: 11px;
+        font-weight: 700;
+        position: relative;
+        top: -8px;
+        margin-left: 5px;
+      }
+      &.new:after{
+        content: "NEW";
+        color: #e10000;
+        font-size: 11px;
+        font-weight: 700;
+        position: relative;
+        top: -8px;
+        margin-left: 5px;
+      }
+      &:hover{
+        color: #111;
+      }
     }
+
   }
   .header_contacts{
     display: flex;
@@ -36,6 +65,7 @@ header{
       font-weight: 500;
       text-align: right;
       font-size: 27px;
+      margin-bottom: 3px;
     }
     span{
       font-size: 12px;
@@ -75,19 +105,20 @@ header{
   align-items: center;
   width: 100%;
   position: relative;
-  &:before{
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-color: rgba(1, 95, 6, 0.62);
-    position: absolute;
-    z-index: 0;
-    display: inline-block;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-  }
+  opacity: 1;
+  //&:before{
+  //  content: "";
+  //  width: 100%;
+  //  height: 100%;
+  //  //background-color: rgba(1, 95, 6, 0.72);
+  //  position: absolute;
+  //  z-index: 0;
+  //  display: inline-block;
+  //  left: 0;
+  //  right: 0;
+  //  top: 0;
+  //  bottom: 0;
+  //}
   h1{
     color: #ffffff;
     position: relative;
@@ -106,7 +137,7 @@ header{
 .blog_list_item{
   width: 100%;
   position: relative;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   img{
     width: 100%;
     height: 340px;
@@ -179,4 +210,174 @@ header{
 
     }
   }
+}
+
+footer{
+  width: 100%;
+  background-color: $main_color;
+  margin-top: 20px;
+
+
+  .footer_wrap{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: space-between;
+    padding: 25px 0;
+    border-bottom: 1px solid #fff;
+
+
+  }
+  .logo{
+    margin-right: 35px;
+  }
+  .footer_contacts{
+    display: flex;
+    flex-direction: column;
+    float: right;
+    a{
+      color: #ffffff;
+      line-height: 23px;
+      font-weight: 500;
+      text-align: right;
+      font-size: 27px;
+      margin-bottom: 5px;
+    }
+    span{
+      font-size: 12px;
+      font-weight: 400;
+      color: #ffffff;
+      letter-spacing: -0.24px;
+    }
+  }
+  
+}
+
+.footer_main{
+  padding: 20px 0 20px;
+  color: #fff;
+  .footer_menu_item{
+    span{
+      font-size: 17px;
+      font-weight: 700;
+      display: block;
+      margin-bottom: 10px;
+      margin-top: 20px;
+      
+    }
+    ul{
+
+      a{
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 34px;
+        color: #fff;
+        &:hover{
+          color: #2c9fec;
+        }
+      }
+    }
+    .social-list{
+      display: flex;
+      margin-bottom: 10px;
+      li{
+        margin-right: 20px;
+        a{
+          font-size: 24px;
+        }
+      }
+    }
+
+
+  }
+}
+.footer_middle_line{
+  margin-top: 40px;
+  padding-top: 10px;
+  border-top: 1px solid #fff;
+}
+.payments{
+  margin-top: 30px;
+  display: flex;
+
+  margin-bottom: 10px;
+  li{
+    margin-right: 10px;
+  }
+}
+
+.footer_bottom_line{
+  width: 100%;
+  background-color: #fff;
+  padding: 15px 0 20px;
+}
+
+.footer_bottom_line_inform{
+  display: flex;
+
+
+
+  .company_logos{
+    display: flex;
+    margin-right: 20px;
+    a{
+      margin-right: 15px;
+    }
+  }
+  p{
+    color: #999999;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 26px;
+
+  }
+}
+
+.company_developer{
+
+  color: #999999;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 20px;
+  a{
+    color: #4abd57;
+  }
+}
+
+.article_wrap{
+  margin-top: 40px;
+  img{
+
+    max-width: 100%;
+    margin-bottom: 30px;
+    margin-top: 10px;
+  }
+}
+.content{
+  h1{
+    font-size: 30px;
+    color: #555;
+    font-weight: 500;
+    line-height: 40px;
+    margin-bottom: 25px;
+  }
+  h2{
+    font-size: 26px;
+    color: #555;
+    font-weight: 500;
+    margin-bottom: 15px;
+  }
+  p{
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    line-height: 20px;
+    a{
+      color: #00b3ee;
+    }
+  }
+}
+
+.post-navigation{
+
 }
