--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,223 +1,144 @@
 @import "vars";
 
 
-@media only screen and (max-width: 1900px) {
-  .phone_wrap .phone_1 .phone_wrap_bg{
-    background-image: none;
+@media only screen and (max-width: 1400px) {
+  header .header_contacts span {
+    font-size: 11px;
+  }
+  header .menu-list li {
+    margin-right: 19px;
+    position: relative;
+  }
+  header .logo {
+    margin-right:0;
   }
 }
 @media only screen and (max-width: 1200px) {
-  .phone_wrap .phone_2 .phone_wrap_bg {
-    margin: 0;
-    padding: 41px 0;
+  header .menu-list {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    width: 100%;
+    background-color: #0b6f18;
+    left: 0;
+    top: 77px;
+    z-index: 20;
+    padding: 12px 40px;
+    justify-content: center;
   }
-  .phone_inform span {
-    color: #fb9332;
-    font-size: 36px;
-    font-weight: 100;
-    line-height: 40px;
-    display: block;
-    margin-bottom: 40px;
+  .title_page{
+    margin-top: 50px;
+    height: 200px;
   }
-  .phone_wrap .phone_2 .phone_inform:before {
+  .blog_list_item img {
 
-    height: 335px;
-    bottom: -360px;
-    right: 311px;
-    z-index: 10;
-  }
-  .our_team_item .our_team_item_inform {
-    padding: 55px;
-    background-color: #fff;
-  }
-  .our_team:before {
+    height: 250px;
 
-    font-size: 91px;
-
-    bottom: -14px;
-    left: -webkit-calc(50% - 285px);
-    left: calc(50% - 170px);
   }
 }
 
 @media only screen and (max-width: 992px) {
-  .row-medium{
-    display: flex;
-    flex-direction: column-reverse;
-
-  }
-  .main_screen {
-
-
-    background-position:  right top;
-    background-size: cover;
-  }
-  .phone_wrap .phone_1 .phone {
-
-    transform: none;
-    padding: 53px 14px 70px;
-    margin: 0 auto;
-    position: relative;
-    z-index: 10;
-  }
-  .phone_inform{
-    margin-bottom: 30px;
-  }
-  .phone_inform span{
-    text-align: center;
-  }
-  .phone_inform p{
-    text-align: center;
-    font-size: 20px;
-    line-height: 28px;
-  }
-  .phone_wrap .phone_1 .phone_wrap_bg:before,.phone_wrap .phone_2 .phone_inform:before,.phone_wrap .phone_3 .phone_inform:before{
-    display: none;
-  }
-  .phone_2 .phone_wrap_bg {
-
-    width: 706px;
-    height: 705px;
-  }
-  .phone_wrap .phone_1 .phone_wrap_bg{
-    padding-bottom: 0;
-  }
-  .phone_wrap .phone_3 {
-    padding: 0 0;
-    margin-top: 100px;
+  .blog_list_item img {
     width: 100%;
+    height: 189px;
+
   }
-  .our_team_item_img img{
-    width: 300px;
-  }
-  .main_screen {
+  .blog_list_item .blog_list_item_inform {
+
     width: 100%;
-    min-height: 652px;
-    padding-bottom: 100px;
+    margin: 0;
+    background-color: #fff;
+    padding: 18px;
+    display: inline-block;
 
-    background-color: #f78715;
   }
-  .phone_wrap {
-    margin-top: 0;
-    padding-bottom: 100px;
-
+  .footer_bottom_line_inform{
+    flex-direction: column;
+  }
+  .footer_bottom_line_inform .company_logos{
+    margin-bottom: 20px;
+    margin-top: 15px;
+  }
+  .title_page {
+    height: 140px;
   }
 }
 
 @media only screen and (max-width: 767px) {
-  .phone_2 .phone_wrap_bg {
-
-    width: 100%;
-    height: auto;
-  }
-  .form_main form {
-    padding: 70px 30px;
-  }
-  .our_team h2 {
-    color: #fff;
-    font-family: Roboto;
-    font-size: 34px;
-    font-weight: 300;
-    margin-bottom: 40px;
-    text-align: center;
-  }
-  .our_team_item{
+  header .menu-list {
+    top: 73px;
     flex-direction: column;
-    .our_team_item_img img{
-      width: 100%;
-      max-width: 300px;
+    display: none;
+    li{
+      margin-right: 0;
+      margin-bottom: 5px;
     }
-
   }
-  .our_team_item .our_team_item_inform {
-    padding: 25px;
-    background-color: #fff;
-  }
-  .main_logo span{
-    display: none;
-  }
-  body .name{
-    font-size: 40px;
-  }
-  .main_screen_inform .logo img{
-    margin: 20px auto 0;
-  }
-  .main_screen_inform > p {
-    font-size: 22px;
-    font-weight: 400;
-    margin-bottom: 20px;
-    margin-top: 10px;
-  }
-  .main_screen_inform>span {
-    color: #fff;
-    font-size: 17px;
-    font-weight: 100;
-    line-height: 22px;
-    text-align: center;
-  }
-  .main_screen {
-    width: 100%;
-    min-height: inherit;
-    padding-bottom: 74px;
-    background-color: #f78715;
-  }
-  .phone_wrap .phone_1 .phone_inform {
-    margin-top: 60px;
-
-  }
-  .phone_inform span {
-    color: #fb9332;
-    font-size: 24px;
-    font-weight: 300;
-    line-height: 29px;
+  .menu-link{
     display: block;
-    margin-bottom: 15px;
   }
-  .phone_inform p {
-    text-align: center;
-    font-size: 16px;
-    line-height: 22px;
+  header .header_wrap {
+    justify-content: flex-start;
+    align-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
   }
-  .phone_wrap .phone_2 .phone_inform {
-    position: relative;
-    margin-top: 111px;
+  header .logo{
+    margin-right: 0;
   }
-  .phone_wrap .phone_3 {
+  .title_page{
+    margin-top: 0;
+  }
+  header .header_contacts a {
 
+    font-size: 20px;
+    margin-bottom: 3px;
+
+  }
+  header .header_contacts {
+    margin-top: 10px;
+    float: right;
     width: 100%;
-
-    min-height: inherit;
-
-    padding-bottom: 129px;
   }
-  .our_team_item .our_team_item_inform p {
-
-    font-size: 16px;
-    font-weight: 300;
+  header .header_contacts span{
+    text-align: right;
+  }
+  .footer_main .footer_menu_item ul a {
+    font-size: 14px;
+    font-weight: 400;
     line-height: 23px;
+    color: #fff;
   }
-  .our_team {
-    padding-top: 430px;
-    background-image: url(../img/tean_bg.jpg);
-    background-color: #de9726;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
-    min-height: initial;
-    padding-bottom: 80px;
-    position: relative;
-    overflow: hidden;
-  }
-  .our_team:before {
-    font-size: 56px;
-    bottom: -7px;
 
-    left: calc(50% - 100px);
+  .footer_main{
+    padding: 0;
   }
-  .phone_wrap .phone_4 .phone_wrap_bg:before,.phone_wrap .phone_4 .phone_wrap_bg:after{
-    display: none;
+  .pagination .nav-links .page-numbers {
+    width: 30px;
+    height: 30px;
+    margin-right: 7px;
   }
-  .phone_wrap .phone_4 .phone_wrap_bg{
-    background-size: contain;
+  footer .footer_contacts a {
+
+    margin-top: 16px;
+  }
+  .title_page {
+    height: 100px;
+    h1{
+      font-size: 34px;
+    }
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .logo img{
+    width: 180px;
+  }
+  header .header_contacts {
+    margin-top: 21px;
+    float: right;
+    width: 100%;
   }
 }
