--- a/app/include/article.html
+++ b/app/include/article.html
@@ -52,57 +52,56 @@
                        </div>
                    </nav>
 
+                   <div class="row justify-content-center">
+                       <div class="col-xl-10">
+                           <div id="comments" class="comments-area">
+                               <h2 class="comments-title">Comments</h2><!-- .comments-title -->
+                               <ol class="comment-list">
+                                   <li id="comment-2" class="comment even thread-even depth-1">
+                                       <article id="div-comment-2" class="comment-body">
+                                           <div class="comment-meta">
+                                               <div class="comment-author vcard">
+                                                   <b class="fn">Test Test</b>
+                                               </div>
+                                               <div class="comment-metadata">
+                                                   <a href="">
+                                                       <time datetime="2018-08-20T13:22:58+00:00">
+                                                           August 20, 2018 at 1:22 pm
+                                                       </time>
+                                                   </a>
+                                               </div>
+                                           </div>
+                                           <div class="comment-content">
+                                               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, eligendi, qui. Autem corporis culpa facere facilis laborum, libero molestiae sequi!</p>
+                                           </div>
+                                           <div class="reply"><a rel="nofollow" class="comment-reply-link" href="#comment-2" onclick="return addComment.moveForm( &quot;div-comment-2&quot;, &quot;2&quot;, &quot;respond&quot;, &quot;93&quot; )" aria-label="Reply to Test Test"></a></div>
+                                       </article>
+                                   </li>
+                               </ol>
 
-
-
-
-
-                   <div id="comments" class="comments-area">
-                       <h2 class="comments-title">Comments		</h2><!-- .comments-title -->
-                       <ol class="comment-list">
-                           <li id="comment-2" class="comment even thread-even depth-1">
-                               <article id="div-comment-2" class="comment-body">
-                                   <div class="comment-meta">
-                                       <div class="comment-author vcard">
-                                           <b class="fn">Test Test</b> <span class="says">says:</span>
+                               <div id="respond" class="comment-respond">
+                                   <h3 id="reply-title" class="comment-reply-title">Leave a comment <small><a rel="nofollow" id="cancel-comment-reply-link" href="/uncategorized/aperiri-democritum-ei-has-ea-vide-epicuri-reformidans-usu-2/#respond" style="display:none;">Cancel reply</a></small></h3>
+                                   <p class="form_inform">Your email address will not be published. Required fields are marked *</p>
+                                   <form action="#" method="post" id="commentform" class="comment-form">
+                                       <p class="comment-form-comment"><textarea id="comment" name="comment" cols="45" rows="8" aria-required="true" required="required" placeholder="Comment"></textarea></p>
+                                       <div class="row">
+                                           <div class="col-lg-6">
+                                               <p class="comment-form-author"><input id="author" name="author" type="text" value="" size="30" required="" placeholder="Name *"></p>
+                                           </div>
+                                           <div class="col-lg-6">
+                                               <p class="comment-form-email"><input id="email" name="email" type="text" value="" size="30" aria-describedby="email-notes" placeholder="Email *" required="Email *"></p>
+                                           </div>
                                        </div>
-                                       <div class="comment-metadata">
-                                           <a href="">
-                                               <time datetime="2018-08-20T13:22:58+00:00">
-                                                   August 20, 2018 at 1:22 pm
-                                               </time>
-                                           </a>
-                                       </div>
-                                   </div>
-                                   <div class="comment-content">
-                                       <p>test</p>
-                                   </div>
-                                   <div class="reply"><a rel="nofollow" class="comment-reply-link" href="#comment-2" onclick="return addComment.moveForm( &quot;div-comment-2&quot;, &quot;2&quot;, &quot;respond&quot;, &quot;93&quot; )" aria-label="Reply to Test Test"></a></div>
-                               </article>
-                           </li>
-                       </ol>
+                                       <p class="form-submit">
+                                       <input name="submit" type="submit" id="submit" class="submit button" value="Send">
+                                       <input type="hidden" name="comment_post_ID" value="93" id="comment_post_ID">
+                                       <input type="hidden" name="comment_parent" id="comment_parent" value="0"></p>
+                                   </form>
+                               </div><!-- #respond -->
 
-                       <div id="respond" class="comment-respond">
-                           <h3 id="reply-title" class="comment-reply-title">Leave a comment <small><a rel="nofollow" id="cancel-comment-reply-link" href="/uncategorized/aperiri-democritum-ei-has-ea-vide-epicuri-reformidans-usu-2/#respond" style="display:none;">Cancel reply</a></small></h3>
-                           <form action="http://lovemaker.isolly.com/wp-comments-post.php" method="post" id="commentform" class="comment-form">
-                               <p class="comment-form-author"><label for="author">Name <span class="required">*</span></label> <input id="author" name="author" type="text" value="" size="30" required=""></p>
-                               <p class="comment-form-email"><label for="email">Email <span class="required">*</span></label> <input id="email" name="email" type="text" value="" size="30" aria-describedby="email-notes" required=""></p>
-                               <p class="comment-form-comment"><label for="comment">Comment</label> <textarea id="comment" name="comment" cols="45" rows="8" aria-required="true" required="required"></textarea></p><p class="form-submit"><input name="submit" type="submit" id="submit" class="submit" value="Send"> <input type="hidden" name="comment_post_ID" value="93" id="comment_post_ID">
-                               <input type="hidden" name="comment_parent" id="comment_parent" value="0"></p>
-                           </form>
-                       </div><!-- #respond -->
-
+                           </div>
+                       </div>
                    </div>
-
-
-
-
-
-
-
-
-
-
                </div>
             </div>
         </div>
