--- a/app/scss/_main_page.scss
+++ b/app/scss/_main_page.scss
@@ -77,22 +77,24 @@ header{
 }
 
 .button{
-  width: 193px;
-  height: 60px;
-  background-color: #fb9332;
+  width: 203px;
+  height: 43px;
+  border-radius: 20px;
+  background-color: #2c9fec;
   display: flex;
-  margin: 20px auto 0;
   justify-content: center;
   align-items: center;
   align-content: center;
-  border-radius: 6px;
   cursor: pointer;
-  font-size: 24px;
-  font-weight: 300;
-  line-height: 36px;
-  color: #fff;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  border: none!important;
+  margin: 15px 0;
+
   &:hover{
-    background-color: #ffb83d;
+    background-color: $main_color;
   }
 }
 
@@ -379,5 +381,123 @@ footer{
 }
 
 .post-navigation{
+  margin-top: 30px;
+  margin-bottom: 50px;
+  .nav-links{
+    display: flex;
+    justify-content: space-between;
+    .nav-previous{
+      width: 49%;
+      a{
+        height: 63px;
+        background-color: #ecf2f9;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        align-content: center;
+        padding-left: 50px;
+        color: #2c9fec;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20px;
+        &:before{
+          content: "";
+          width: 0;
+          height: 0;
+          border-top: 34px solid transparent;
+          border-right: 26px solid #ecf2f9;
+          border-bottom: 33px solid transparent;
+          position: absolute;
+          left: -4px;
+        }
+        &:hover{
 
+          color: $main_color;
+
+        }
+      }
+
+    }
+    .nav-next{
+      width: 49%;
+      a{
+        width: 100%;
+        height: 63px;
+        background-color: #ecf2f9;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        align-content: center;
+        padding-right: 50px;
+        color: #2c9fec;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20px;
+        &:before{
+          content: "";
+          width: 0;
+          height: 0;
+          border-top: 34px solid transparent;
+          border-left: 26px solid #ecf2f9;
+          border-bottom: 33px solid transparent;
+          position: absolute;
+          right: -4px;
+        }
+        &:hover{
+          color: $main_color;
+        }
+      }
+    }
+  }
+}
+
+.comments-area{
+  margin-bottom: 60px;
+  ol{
+    padding-left: 0;
+    list-style: none;
+    li{
+      padding: 20px;
+      list-style: none;
+      background-color: #eef4fa;
+      margin-bottom: 20px;
+      p{
+        margin: 0;
+      }
+      .comment-author{
+        b{
+          color: #555;
+          font-weight: 400;
+          font-size: 16px;
+          display: block;
+        }
+      }
+      .comment-metadata{
+        a{
+          color: #989898;
+          font-size: 12px;
+          margin-bottom: 11px;
+          display: block;
+        }
+      }
+
+    }
+  }
+}
+
+.comment-respond{
+  margin-top: 40px;
+
+  p{
+    margin-bottom: 0;
+    &.form_inform{
+      margin-bottom: 25px;
+    }
+  }
+  h3{
+    font-size: 24px;
+    font-weight: 500;
+    color: #555;
+    margin-bottom: 15px;
+  }
 }
