--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -37,6 +37,13 @@
     height: 250px;
 
   }
+  .post-navigation .nav-links .nav-previous a,.post-navigation .nav-links .nav-next a{
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  header{
+    margin-bottom: 40px;
+  }
 }
 
 @media only screen and (max-width: 992px) {
@@ -130,6 +137,30 @@
       font-size: 34px;
     }
   }
+  header{
+    margin-bottom: 0;
+  }
+  .content h1 {
+    font-size: 23px;
+    color: #555;
+    font-weight: 500;
+    line-height: 26px;
+    margin-bottom: 25px;
+  }
+  .post-navigation .nav-links .nav-previous ,.post-navigation .nav-links .nav-next {
+    width: 100%;
+    margin: 10px 0;
+    a{
+      text-align: center;
+      justify-content: center;
+    }
+    a:before{
+      display: none;
+    }
+  }
+  .post-navigation .nav-links{
+    flex-direction: column;
+  }
 }
 
 @media only screen and (max-width: 350px) {
@@ -141,4 +172,5 @@
     float: right;
     width: 100%;
   }
+
 }
